--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 <body>
     <nav class="flex-div">
         <div class="nav-left flex-div">
-            <img src="/images/menu.png" class="menu-icon" alt="">
-           <a href="index.html"> <img src="/images/logo.png" class="logo" alt=""></a>
+            <img src="images/menu.png" class="menu-icon" alt="">
+           <a href="index.html"> <img src="images/logo.png" class="logo" alt=""></a>
         </div>
         <div class="nav-middle flex-div">
             <div class="search-box flex-div">
                 <input type="text" placeholder="Search">
-                <img src="/images/search.png" alt="">
+                <img src="images/search.png" alt="">
             </div>
-            <img src="/images/voice-search.png" class="mic-icon" alt="">
+            <img src="images/voice-search.png" class="mic-icon" alt="">
         </div>
         <div class="nav-right flex-div">
-            <img src="/images/upload.png" alt="">
-            <img src="/images/more.png" alt="">
-            <img src="/images/notification.png" alt="">
-            <img src="/images/Jack.png" alt="" class="user-icon">
+            <img src="images/upload.png" alt="">
+            <img src="images/more.png" alt="">
+            <img src="images/notification.png" alt="">
+            <img src="images/Jack.png" alt="" class="user-icon">
         </div>
     </nav>
 
@@ -32,24 +32,24 @@
 
     <div class="sidebar">
         <div class="shortcuts-links">
-            <a href="#"><img src="/images/home.png" alt=""><p>Home</p></a>
-            <a href="#"><img src="/images/explore.png" alt=""><p>Explore</p></a>
-            <a href="#"><img src="/images/subscriprion.png" alt=""><p>Subscription</p></a>
-            <a href="#"><img src="/images/library.png" alt=""><p>Library</p></a>
-            <a href="#"><img src="/images/history.png" alt=""><p>Hisory</p></a>
-            <a href="#"><img src="/images/playlist.png" alt=""><p>Playlist</p></a>
-            <a href="#"><img src="/images/messages.png" alt=""><p>Messages</p></a>
-            <a href="#"><img src="/images/show-more.png" alt=""><p>Show More</p></a>
+            <a href="#"><img src="images/home.png" alt=""><p>Home</p></a>
+            <a href="#"><img src="images/explore.png" alt=""><p>Explore</p></a>
+            <a href="#"><img src="images/subscriprion.png" alt=""><p>Subscription</p></a>
+            <a href="#"><img src="images/library.png" alt=""><p>Library</p></a>
+            <a href="#"><img src="images/history.png" alt=""><p>Hisory</p></a>
+            <a href="#"><img src="images/playlist.png" alt=""><p>Playlist</p></a>
+            <a href="#"><img src="images/messages.png" alt=""><p>Messages</p></a>
+            <a href="#"><img src="images/show-more.png" alt=""><p>Show More</p></a>
             <hr>
         </div>
 
         <div class="subscribed-list">
             <h3>SUBSCRIBED</h3>
-            <a href="#"><img src="/images/Jack.png" alt=""><p>Jack Nicholasan</p></a>
-            <a href="#"><img src="/images/simon.png" alt=""><p>Simon Baker</p></a>
-            <a href="#"><img src="/images/tom.png" alt=""><p>Tom Hardy</p></a>
-            <a href="#"><img src="/images/megan.png" alt=""><p>Megan Ryan</p></a>
-            <a href="#"><img src="/images/cameron.png" alt=""><p>Cameron Diaz</p></a>
+            <a href="#"><img src="images/Jack.png" alt=""><p>Jack Nicholasan</p></a>
+            <a href="#"><img src="images/simon.png" alt=""><p>Simon Baker</p></a>
+            <a href="#"><img src="images/tom.png" alt=""><p>Tom Hardy</p></a>
+            <a href="#"><img src="images/megan.png" alt=""><p>Megan Ryan</p></a>
+            <a href="#"><img src="images/cameron.png" alt=""><p>Cameron Diaz</p></a>
         </div>
     </div>
 
@@ -57,11 +57,11 @@
 
     <div class="container">
         <div class="banner">
-            <img src="/images/banner.png" alt="">
+            <img src="images/banner.png" alt="">
         </div>
         <div class="list-container">
             <div class="vid-list">
-               <a href="play-video.html"> <img src="/images/thumbnail.jpg" alt="" class="thumbnail"></a>
+               <a href="play-video.html"> <img src="images/thumbnail.jpg" alt="" class="thumbnail"></a>
                 <div class="flex-div">
                     <img src="images/Jack.png" alt="">
                     <div class="vid-info">
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="vid-list">
-               <a href="#"> <img src="/images/thumbnail2.png" alt="" class="thumbnail"></a>
+               <a href="#"> <img src="images/thumbnail2.png" alt="" class="thumbnail"></a>
                 <div class="flex-div">
                     <img src="images/Jack.png" alt="">
                     <div class="vid-info">
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="vid-list">
-               <a href="#"> <img src="/images/thumbnail3.png" alt="" class="thumbnail"></a>
+               <a href="#"> <img src="images/thumbnail3.png" alt="" class="thumbnail"></a>
                 <div class="flex-div">
                     <img src="images/Jack.png" alt="">
                     <div class="vid-info">
@@ -97,7 +97,7 @@
                 </div>
             </div>
             <div class="vid-list">
-               <a href="#"> <img src="/images/thumbnail4.png" alt="" class="thumbnail"></a>
+               <a href="#"> <img src="images/thumbnail4.png" alt="" class="thumbnail"></a>
                 <div class="flex-div">
                     <img src="images/Jack.png" alt="">
                     <div class="vid-info">
@@ -109,7 +109,7 @@
                 </div>
             </div>
             <div class="vid-list">
-               <a href="#"> <img src="/images/thumbnail5.png" alt="" class="thumbnail"></a>
+               <a href="#"> <img src="images/thumbnail5.png" alt="" class="thumbnail"></a>
                 <div class="flex-div">
                     <img src="images/Jack.png" alt="">
                     <div class="vid-info">
@@ -121,7 +121,7 @@
                 </div>
             </div>
             <div class="vid-list">
-               <a href="#"> <img src="/images/thumbnail6.png" alt="" class="thumbnail"></a>
+               <a href="#"> <img src="images/thumbnail6.png" alt="" class="thumbnail"></a>
                 <div class="flex-div">
                     <img src="images/Jack.png" alt="">
                     <div class="vid-info">
@@ -133,7 +133,7 @@
                 </div>
             </div>
             <div class="vid-list">
-               <a href="#"> <img src="/images/thumbnail7.png" alt="" class="thumbnail"></a>
+               <a href="#"> <img src="images/thumbnail7.png" alt="" class="thumbnail"></a>
                 <div class="flex-div">
                     <img src="images/Jack.png" alt="">
                     <div class="vid-info">
@@ -145,7 +145,7 @@
                 </div>
             </div>
             <div class="vid-list">
-               <a href="#"> <img src="/images/thumbnail8.png" alt="" class="thumbnail"></a>
+               <a href="#"> <img src="images/thumbnail8.png" alt="" class="thumbnail"></a>
                 <div class="flex-div">
                     <img src="images/Jack.png" alt="">
                     <div class="vid-info">
