--- a/play-video.html
+++ b/play-video.html
@@ -10,21 +10,21 @@
 <body>
     <nav class="flex-div">
         <div class="nav-left flex-div">
-            <img src="/images/menu.png" class="menu-icon" alt="">
-            <a href="index.html"> <img src="/images/logo.png" class="logo" alt=""></a>
+            <img src="images/menu.png" class="menu-icon" alt="">
+            <a href="index.html"> <img src="images/logo.png" class="logo" alt=""></a>
         </div>
         <div class="nav-middle flex-div">
             <div class="search-box flex-div">
                 <input type="text" placeholder="Search">
-                <img src="/images/search.png" alt="">
+                <img src="images/search.png" alt="">
             </div>
-            <img src="/images/voice-search.png" class="mic-icon" alt="">
+            <img src="images/voice-search.png" class="mic-icon" alt="">
         </div>
         <div class="nav-right flex-div">
-            <img src="/images/upload.png" alt="">
-            <img src="/images/more.png" alt="">
-            <img src="/images/notification.png" alt="">
-            <img src="/images/Jack.png" alt="" class="user-icon">
+            <img src="images/upload.png" alt="">
+            <img src="images/more.png" alt="">
+            <img src="images/notification.png" alt="">
+            <img src="images/Jack.png" alt="" class="user-icon">
         </div>
     </nav>
 
