--- a/index.html
+++ b/index.html
@@ -156,6 +156,102 @@
                     </div>
                 </div>
             </div>
+            <div class="vid-list">
+               <a href="#"> <img src="images/thumbnail2.png" alt="" class="thumbnail"></a>
+                <div class="flex-div">
+                    <img src="images/Jack.png" alt="">
+                    <div class="vid-info">
+                        <a href="#">Best channel to learn coding that help you to a web devloper</a>
+                        <p>Easy Tutorials</p>
+                        <p>15k Views &bull; 2 days</p>
+
+                    </div>
+                </div>
+            </div>
+            <div class="vid-list">
+               <a href="#"> <img src="images/thumbnail3.png" alt="" class="thumbnail"></a>
+                <div class="flex-div">
+                    <img src="images/Jack.png" alt="">
+                    <div class="vid-info">
+                        <a href="#">Best channel to learn coding that help you to a web devloper</a>
+                        <p>Easy Tutorials</p>
+                        <p>15k Views &bull; 2 days</p>
+
+                    </div>
+                </div>
+            </div>
+            <div class="vid-list">
+               <a href="#"> <img src="images/thumbnail4.png" alt="" class="thumbnail"></a>
+                <div class="flex-div">
+                    <img src="images/Jack.png" alt="">
+                    <div class="vid-info">
+                        <a href="#">Best channel to learn coding that help you to a web devloper</a>
+                        <p>Easy Tutorials</p>
+                        <p>15k Views &bull; 2 days</p>
+
+                    </div>
+                </div>
+            </div>
+            <div class="vid-list">
+               <a href="#"> <img src="images/thumbnail5.png" alt="" class="thumbnail"></a>
+                <div class="flex-div">
+                    <img src="images/Jack.png" alt="">
+                    <div class="vid-info">
+                        <a href="#">Best channel to learn coding that help you to a web devloper</a>
+                        <p>Easy Tutorials</p>
+                        <p>15k Views &bull; 2 days</p>
+
+                    </div>
+                </div>
+            </div>
+            <div class="vid-list">
+               <a href="#"> <img src="images/thumbnail6.png" alt="" class="thumbnail"></a>
+                <div class="flex-div">
+                    <img src="images/Jack.png" alt="">
+                    <div class="vid-info">
+                        <a href="#">Best channel to learn coding that help you to a web devloper</a>
+                        <p>Easy Tutorials</p>
+                        <p>15k Views &bull; 2 days</p>
+
+                    </div>
+                </div>
+            </div>
+            <div class="vid-list">
+               <a href="#"> <img src="images/thumbnail7.png" alt="" class="thumbnail"></a>
+                <div class="flex-div">
+                    <img src="images/Jack.png" alt="">
+                    <div class="vid-info">
+                        <a href="#">Best channel to learn coding that help you to a web devloper</a>
+                        <p>Easy Tutorials</p>
+                        <p>15k Views &bull; 2 days</p>
+
+                    </div>
+                </div>
+            </div>
+            <div class="vid-list">
+               <a href="#"> <img src="images/thumbnail3.png" alt="" class="thumbnail"></a>
+                <div class="flex-div">
+                    <img src="images/Jack.png" alt="">
+                    <div class="vid-info">
+                        <a href="#">Best channel to learn coding that help you to a web devloper</a>
+                        <p>Easy Tutorials</p>
+                        <p>15k Views &bull; 2 days</p>
+
+                    </div>
+                </div>
+            </div>
+            <div class="vid-list">
+               <a href="#"> <img src="images/thumbnail8.png" alt="" class="thumbnail"></a>
+                <div class="flex-div">
+                    <img src="images/Jack.png" alt="">
+                    <div class="vid-info">
+                        <a href="#">Best channel to learn coding that help you to a web devloper</a>
+                        <p>Easy Tutorials</p>
+                        <p>15k Views &bull; 2 days</p>
+
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
