--- a/play-video.html
+++ b/play-video.html
@@ -35,7 +35,7 @@
                     <source src="images/video.mp4" type="video/mp4">
                 </video>
                 <div class="tags">
-                    <a href="#">#Coding</a>
+                    <a href="#">#Programmers</a>
                     <a href="#">#HTML</a>
                     <a href="#">#CSS</a>
                     <a href="#">#Javascript</a>
@@ -43,7 +43,7 @@
                     <a href="#">#WebDeveloper</a>
     
                 </div>
-                <h3>Best Channel to learn coding that help you to a web devloper</h3>
+                <h3>A day in a programmer's life - Animation</h3>
                 <div class="play-video-info">
                     <p>15k Views &bull; 2 days ago</p>
                     <div>
