--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="flex-div">
                     <img src="images/Jack.png" alt="">
                     <div class="vid-info">
-                        <a href="play-video.html">Best channel to learn coding that help you to a web devloper</a>
+                        <a href="play-video.html">A day in a programmer's life - Animation</a>
                         <p>Easy Tutorials</p>
                         <p>15k Views &bull; 2 days</p>
 
